src/objects/Milestone1_Task__c.object
<CustomObject>
    <description>Force.com Labs - PM - An activity that has hours, budget, and is assigned to a User.</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>このタスクの責任者。デフォルトでは現在のユーザ。</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Tasks_Assigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blocked_Reason__c</fullName>
        <inlineHelpText>ブロックされた理由</inlineHelpText>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ブロック</inlineHelpText>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <inlineHelpText>自分がわかるように分類わけを設定</inlineHelpText>
        <label>Class</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Hoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>このタスクの完了状態。</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Late_Formula__c</fullName>
        <formula>Today() -  Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Late Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Late__c</fullName>
        <inlineHelpText>このタスクの遅延日数</inlineHelpText>
        <label>Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>タスクの概要。目的などを書く。</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>このタスクの完了期限日。デフォルトではマイルストーンの期限日が設定される。</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_GUID__c</fullName>
        <description>This field is used to track Email for a reply to email chain.</description>
        <externalId>true</externalId>
        <label>Email GUID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Expense__c</fullName>
        <inlineHelpText>タスクから算出された推定費用</inlineHelpText>
        <label>Estimated Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <inlineHelpText>タスクから算出された推定時間</inlineHelpText>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Balance__c</fullName>
        <formula>Estimated_Expense__c - Total_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>推定される総費用</inlineHelpText>
        <label>Expense Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Balance__c</fullName>
        <formula>Estimated_Hours__c - Total_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>推定される総時間</inlineHelpText>
        <label>Hours Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index_Helper__c</fullName>
        <formula>Assigned_To__r.FirstName &amp; &apos; &apos; &amp; Assigned_To__r.LastName &amp; &apos; &apos; &amp; Project_Milestone__r.Project__r.Name &amp; &apos; &apos; &amp; Project_Milestone__r.Name &amp; &apos; complete:&apos; &amp; IF(Complete__c, &apos;yes&apos;, &apos;no&apos;) &amp; &apos; &apos; &amp; Name</formula>
        <label>Index Helper</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <externalId>true</externalId>
        <label>Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received__c</fullName>
        <description>Date Time the last email was sent to this task.</description>
        <inlineHelpText>最後のメールを受信した日時。タスクはメール経由でも作成可能で、タスクのメモ＆添付ファイルに保存される。</inlineHelpText>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Milestone_Grandparent__c</fullName>
        <formula>if (
 Project_Milestone__r.Parent_Milestone__c != null, 
 Project_Milestone__r.Parent_Milestone__r.Name , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Grandparent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>if ( Complete__c == true, &apos;Complete&apos;,
  if ( and( Days_Late_Formula__c &gt; 0,  Blocked__c  ),
    if(Len( Text(Task_Stage__c))&gt;0 , &apos;Late &amp; Blocked &apos; &amp; Text(Task_Stage__c), &apos;Late &amp; Blocked&apos;),
    if (Days_Late_Formula__c &gt; 0,  
      if(Len( Text(Task_Stage__c))&gt;0, &apos;Late &apos; &amp; text(Task_Stage__c), &apos;Late&apos;),
      if(Blocked__c == true, 
        if(Len( Text(Task_Stage__c))&gt;0, &apos;Blocked &apos; &amp; text(Task_Stage__c), &apos;Blocked&apos;), 
        if(Len( Text(Task_Stage__c))&gt;0, &apos;Open &apos; &amp; Text(Task_Stage__c), &apos;Open&apos;) 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>タスクが完了、進行中、遅延、ブロックまたは、遅延ブロックされていることを示す</inlineHelpText>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <formula>Project_Milestone__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task_Import_Id__c</fullName>
        <label>Predecessor_Task_Import_Id__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>このタスクの前のタスク</inlineHelpText>
        <label>Predecessor Task</label>
        <referenceTo>Milestone1_Task__c</referenceTo>
        <relationshipLabel>Successor Tasks</relationshipLabel>
        <relationshipName>Successor_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>このタスクの優先度。0，1，2，3，4で設定。</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <formula>Project_Milestone__r.Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectStatus__c</fullName>
        <formula>TEXT(Project_Milestone__r.Project__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Milestone__c</fullName>
        <inlineHelpText>タスクが割り当てられているマイルストーン</inlineHelpText>
        <label>Milestone</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>HYPERLINK(Project_Milestone__r.Project__c, Project_Milestone__r.Project__r.Name,&apos;_self&apos;)</formula>
        <inlineHelpText>このタスクが属するプロジェクトへのリンク</inlineHelpText>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_ID__c</fullName>
        <inlineHelpText>全てのタスクとプロジェクトから参照可能なユニークなID</inlineHelpText>
        <label>Short ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>タスクの開始日</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Number__c</fullName>
        <inlineHelpText>全てのタスクとプロジェクトから参照可能なユニークなID</inlineHelpText>
        <label>Task Short ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Task_Stage__c</fullName>
        <inlineHelpText>タスクの状態</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Expense__c</fullName>
        <inlineHelpText>全ての子レコードの総費用</inlineHelpText>
        <label>Total Expense</label>
        <summarizedField>Milestone1_Expense__c.Amount__c</summarizedField>
        <summaryForeignKey>Milestone1_Expense__c.Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <inlineHelpText>全てのレコードの総時間</inlineHelpText>
        <label>Total Hours</label>
        <summarizedField>Milestone1_Time__c.Hours__c</summarizedField>
        <summaryForeignKey>Milestone1_Time__c.Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CannotBeBlockedIfComplete</fullName>
        <active>true</active>
        <errorConditionFormula>if (And ( Blocked__c == true, Complete__c == true), true, false)</errorConditionFormula>
        <errorDisplayField>Blocked__c</errorDisplayField>
        <errorMessage>You cannot mark a completed task as blocked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotBeCompleteIfBlocked</fullName>
        <active>true</active>
        <errorConditionFormula>if (and ( Complete__c == true,  Blocked__c ==true), true, false)</errorConditionFormula>
        <errorDisplayField>Complete__c</errorDisplayField>
        <errorMessage>You cannot complete a task marked as blocked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Greater_Than_Milestone_Deadline</fullName>
        <active>false</active>
        <errorConditionFormula>Due_Date__c &gt;  Project_Milestone__r.Deadline__c</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date should be smaller than Milestone Deadline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Smaller_Than_Milestone_Kickoff</fullName>
        <active>false</active>
        <errorConditionFormula>Due_Date__c &lt;  Project_Milestone__r.Kickoff__c</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date should be greater than Milestone Kickoff Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_be_blank_if_not_blocked</fullName>
        <active>true</active>
        <errorConditionFormula>IF( and(Blocked__c == false, len( Blocked_Reason__c ) &gt; 0) , True, False)</errorConditionFormula>
        <errorDisplayField>Blocked_Reason__c</errorDisplayField>
        <errorMessage>Must be blank if &quot;blocked&quot; is not checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_not_be_blank_if_blocked</fullName>
        <active>true</active>
        <errorConditionFormula>IF( and(Blocked__c == true, len( Blocked_Reason__c ) == 0) , True, False)</errorConditionFormula>
        <errorDisplayField>Blocked_Reason__c</errorDisplayField>
        <errorMessage>If this task is blocked you must enter a reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_More_Than_Due_Date</fullName>
        <active>false</active>
        <errorConditionFormula>if (and(!isblank(Start_Date__c), !isblank(Due_Date__c)), true, false)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date should be greater than Start Date</errorMessage>
    </validationRules>
</CustomObject>